language-bindings/python/src/wamr/wamrapi/iwasm.py


# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 222
if _libs["../libs/libiwasm.so"].has("wasm_runtime_full_init", "cdecl"):
    wasm_runtime_full_init = _libs["../libs/libiwasm.so"].get("wasm_runtime_full_init", "cdecl")
    wasm_runtime_full_init.argtypes = [POINTER(RuntimeInitArgs)]
    wasm_runtime_full_init.restype = c_bool

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 232
for _lib in _libs.values():
    if not _lib.has("wasm_runtime_is_running_mode_supported", "cdecl"):
        continue
    wasm_runtime_is_running_mode_supported = _lib.get("wasm_runtime_is_running_mode_supported", "cdecl")
    wasm_runtime_is_running_mode_supported.argtypes = [RunningMode]
    wasm_runtime_is_running_mode_supported.restype = c_bool
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 244
for _lib in _libs.values():
    if not _lib.has("wasm_runtime_set_default_running_mode", "cdecl"):
        continue
    wasm_runtime_set_default_running_mode = _lib.get("wasm_runtime_set_default_running_mode", "cdecl")
    wasm_runtime_set_default_running_mode.argtypes = [RunningMode]
    wasm_runtime_set_default_running_mode.restype = c_bool
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 250
if _libs["../libs/libiwasm.so"].has("wasm_runtime_destroy", "cdecl"):
    wasm_runtime_destroy = _libs["../libs/libiwasm.so"].get("wasm_runtime_destroy", "cdecl")
    wasm_runtime_destroy.argtypes = []
    wasm_runtime_destroy.restype = None

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 259
if _libs["../libs/libiwasm.so"].has("wasm_runtime_malloc", "cdecl"):
    wasm_runtime_malloc = _libs["../libs/libiwasm.so"].get("wasm_runtime_malloc", "cdecl")
    wasm_runtime_malloc.argtypes = [c_uint]
    wasm_runtime_malloc.restype = POINTER(c_ubyte)
    wasm_runtime_malloc.errcheck = lambda v,*a : cast(v, c_void_p)

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 270
if _libs["../libs/libiwasm.so"].has("wasm_runtime_realloc", "cdecl"):
    wasm_runtime_realloc = _libs["../libs/libiwasm.so"].get("wasm_runtime_realloc", "cdecl")
    wasm_runtime_realloc.argtypes = [POINTER(None), c_uint]
    wasm_runtime_realloc.restype = POINTER(c_ubyte)
    wasm_runtime_realloc.errcheck = lambda v,*a : cast(v, c_void_p)

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 277
if _libs["../libs/libiwasm.so"].has("wasm_runtime_free", "cdecl"):
    wasm_runtime_free = _libs["../libs/libiwasm.so"].get("wasm_runtime_free", "cdecl")
    wasm_runtime_free.argtypes = [POINTER(None)]
    wasm_runtime_free.restype = None

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 283
if _libs["../libs/libiwasm.so"].has("wasm_runtime_get_mem_alloc_info", "cdecl"):
    wasm_runtime_get_mem_alloc_info = _libs["../libs/libiwasm.so"].get("wasm_runtime_get_mem_alloc_info", "cdecl")
    wasm_runtime_get_mem_alloc_info.argtypes = [POINTER(mem_alloc_info_t)]
    wasm_runtime_get_mem_alloc_info.restype = c_bool

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 294
if _libs["../libs/libiwasm.so"].has("get_package_type", "cdecl"):
    get_package_type = _libs["../libs/libiwasm.so"].get("get_package_type", "cdecl")
    get_package_type.argtypes = [POINTER(uint8_t), uint32_t]
    get_package_type.restype = package_type_t

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 305
if _libs["../libs/libiwasm.so"].has("wasm_runtime_is_xip_file", "cdecl"):
    wasm_runtime_is_xip_file = _libs["../libs/libiwasm.so"].get("wasm_runtime_is_xip_file", "cdecl")
    wasm_runtime_is_xip_file.argtypes = [POINTER(uint8_t), uint32_t]
    wasm_runtime_is_xip_file.restype = c_bool

module_reader = CFUNCTYPE(UNCHECKED(c_bool), String, POINTER(POINTER(uint8_t)), POINTER(uint32_t))# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 310

module_destroyer = CFUNCTYPE(UNCHECKED(None), POINTER(uint8_t), uint32_t)# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 316

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 325
for _lib in _libs.values():
    if not _lib.has("wasm_runtime_set_module_reader", "cdecl"):
        continue
    wasm_runtime_set_module_reader = _lib.get("wasm_runtime_set_module_reader", "cdecl")
    wasm_runtime_set_module_reader.argtypes = [module_reader, module_destroyer]
    wasm_runtime_set_module_reader.restype = None
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 339
for _lib in _libs.values():
    if not _lib.has("wasm_runtime_register_module", "cdecl"):
        continue
    wasm_runtime_register_module = _lib.get("wasm_runtime_register_module", "cdecl")
    wasm_runtime_register_module.argtypes = [String, wasm_module_t, String, uint32_t]
    wasm_runtime_register_module.restype = c_bool
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 351
for _lib in _libs.values():
    if not _lib.has("wasm_runtime_find_module_registered", "cdecl"):
        continue
    wasm_runtime_find_module_registered = _lib.get("wasm_runtime_find_module_registered", "cdecl")
    wasm_runtime_find_module_registered.argtypes = [String]
    wasm_runtime_find_module_registered.restype = wasm_module_t
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 375
if _libs["../libs/libiwasm.so"].has("wasm_runtime_load", "cdecl"):
    wasm_runtime_load = _libs["../libs/libiwasm.so"].get("wasm_runtime_load", "cdecl")
    wasm_runtime_load.argtypes = [POINTER(uint8_t), uint32_t, String, uint32_t]
    wasm_runtime_load.restype = wasm_module_t

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 389
if _libs["../libs/libiwasm.so"].has("wasm_runtime_load_from_sections", "cdecl"):
    wasm_runtime_load_from_sections = _libs["../libs/libiwasm.so"].get("wasm_runtime_load_from_sections", "cdecl")
    wasm_runtime_load_from_sections.argtypes = [wasm_section_list_t, c_bool, String, uint32_t]
    wasm_runtime_load_from_sections.restype = wasm_module_t

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 398
if _libs["../libs/libiwasm.so"].has("wasm_runtime_unload", "cdecl"):
    wasm_runtime_unload = _libs["../libs/libiwasm.so"].get("wasm_runtime_unload", "cdecl")
    wasm_runtime_unload.argtypes = [wasm_module_t]
    wasm_runtime_unload.restype = None

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 408
for _lib in _libs.values():
    if not _lib.has("wasm_runtime_get_module_hash", "cdecl"):
        continue
    wasm_runtime_get_module_hash = _lib.get("wasm_runtime_get_module_hash", "cdecl")
    wasm_runtime_get_module_hash.argtypes = [wasm_module_t]
    if sizeof(c_int) == sizeof(c_void_p):
        wasm_runtime_get_module_hash.restype = ReturnString
    else:
        wasm_runtime_get_module_hash.restype = String
        wasm_runtime_get_module_hash.errcheck = ReturnString
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 438
if _libs["../libs/libiwasm.so"].has("wasm_runtime_set_wasi_args_ex", "cdecl"):
    wasm_runtime_set_wasi_args_ex = _libs["../libs/libiwasm.so"].get("wasm_runtime_set_wasi_args_ex", "cdecl")
    wasm_runtime_set_wasi_args_ex.argtypes = [wasm_module_t, POINTER(POINTER(c_char)), uint32_t, POINTER(POINTER(c_char)), uint32_t, POINTER(POINTER(c_char)), uint32_t, POINTER(POINTER(c_char)), c_int, c_int, c_int, c_int]
    wasm_runtime_set_wasi_args_ex.restype = None

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 452
if _libs["../libs/libiwasm.so"].has("wasm_runtime_set_wasi_args", "cdecl"):
    wasm_runtime_set_wasi_args = _libs["../libs/libiwasm.so"].get("wasm_runtime_set_wasi_args", "cdecl")
    wasm_runtime_set_wasi_args.argtypes = [wasm_module_t, POINTER(POINTER(c_char)), uint32_t, POINTER(POINTER(c_char)), uint32_t, POINTER(POINTER(c_char)), uint32_t, POINTER(POINTER(c_char)), c_int]
    wasm_runtime_set_wasi_args.restype = None

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 459
if _libs["../libs/libiwasm.so"].has("wasm_runtime_set_wasi_addr_pool", "cdecl"):
    wasm_runtime_set_wasi_addr_pool = _libs["../libs/libiwasm.so"].get("wasm_runtime_set_wasi_addr_pool", "cdecl")
    wasm_runtime_set_wasi_addr_pool.argtypes = [wasm_module_t, POINTER(POINTER(c_char)), uint32_t]
    wasm_runtime_set_wasi_addr_pool.restype = None

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 463
if _libs["../libs/libiwasm.so"].has("wasm_runtime_set_wasi_ns_lookup_pool", "cdecl"):
    wasm_runtime_set_wasi_ns_lookup_pool = _libs["../libs/libiwasm.so"].get("wasm_runtime_set_wasi_ns_lookup_pool", "cdecl")
    wasm_runtime_set_wasi_ns_lookup_pool.argtypes = [wasm_module_t, POINTER(POINTER(c_char)), uint32_t]
    wasm_runtime_set_wasi_ns_lookup_pool.restype = None

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 486
if _libs["../libs/libiwasm.so"].has("wasm_runtime_instantiate", "cdecl"):
    wasm_runtime_instantiate = _libs["../libs/libiwasm.so"].get("wasm_runtime_instantiate", "cdecl")
    wasm_runtime_instantiate.argtypes = [wasm_module_t, uint32_t, uint32_t, String, uint32_t]
    wasm_runtime_instantiate.restype = wasm_module_inst_t

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 502
for _lib in _libs.values():
    if not _lib.has("wasm_runtime_set_running_mode", "cdecl"):
        continue
    wasm_runtime_set_running_mode = _lib.get("wasm_runtime_set_running_mode", "cdecl")
    wasm_runtime_set_running_mode.argtypes = [wasm_module_inst_t, RunningMode]
    wasm_runtime_set_running_mode.restype = c_bool
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 516
for _lib in _libs.values():
    if not _lib.has("wasm_runtime_get_running_mode", "cdecl"):
        continue
    wasm_runtime_get_running_mode = _lib.get("wasm_runtime_get_running_mode", "cdecl")
    wasm_runtime_get_running_mode.argtypes = [wasm_module_inst_t]
    wasm_runtime_get_running_mode.restype = RunningMode
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 524
if _libs["../libs/libiwasm.so"].has("wasm_runtime_deinstantiate", "cdecl"):
    wasm_runtime_deinstantiate = _libs["../libs/libiwasm.so"].get("wasm_runtime_deinstantiate", "cdecl")
    wasm_runtime_deinstantiate.argtypes = [wasm_module_inst_t]
    wasm_runtime_deinstantiate.restype = None

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 534
if _libs["../libs/libiwasm.so"].has("wasm_runtime_get_module", "cdecl"):
    wasm_runtime_get_module = _libs["../libs/libiwasm.so"].get("wasm_runtime_get_module", "cdecl")
    wasm_runtime_get_module.argtypes = [wasm_module_inst_t]
    wasm_runtime_get_module.restype = wasm_module_t

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 537
if _libs["../libs/libiwasm.so"].has("wasm_runtime_is_wasi_mode", "cdecl"):
    wasm_runtime_is_wasi_mode = _libs["../libs/libiwasm.so"].get("wasm_runtime_is_wasi_mode", "cdecl")
    wasm_runtime_is_wasi_mode.argtypes = [wasm_module_inst_t]
    wasm_runtime_is_wasi_mode.restype = c_bool

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 540
if _libs["../libs/libiwasm.so"].has("wasm_runtime_lookup_wasi_start_function", "cdecl"):
    wasm_runtime_lookup_wasi_start_function = _libs["../libs/libiwasm.so"].get("wasm_runtime_lookup_wasi_start_function", "cdecl")
    wasm_runtime_lookup_wasi_start_function.argtypes = [wasm_module_inst_t]
    wasm_runtime_lookup_wasi_start_function.restype = wasm_function_inst_t

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 552
if _libs["../libs/libiwasm.so"].has("wasm_runtime_get_wasi_exit_code", "cdecl"):
    wasm_runtime_get_wasi_exit_code = _libs["../libs/libiwasm.so"].get("wasm_runtime_get_wasi_exit_code", "cdecl")
    wasm_runtime_get_wasi_exit_code.argtypes = [wasm_module_inst_t]
    wasm_runtime_get_wasi_exit_code.restype = uint32_t

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 564
if _libs["../libs/libiwasm.so"].has("wasm_runtime_lookup_function", "cdecl"):
    wasm_runtime_lookup_function = _libs["../libs/libiwasm.so"].get("wasm_runtime_lookup_function", "cdecl")
    wasm_runtime_lookup_function.argtypes = [wasm_module_inst_t, String, String]
    wasm_runtime_lookup_function.restype = wasm_function_inst_t
